--- a/style.css
+++ b/style.css
@@ -325,6 +325,7 @@ header .navbar-header.fixed .navbar-list > * {
 }
 .newpoem-quote .false {
   color: var(--lightpurple);
+  margin-right: 0.5rem;
 }
 .newpoem-quote a {
   color: white;
@@ -334,6 +335,7 @@ header .navbar-header.fixed .navbar-list > * {
 }
 .update .false {
   border: 0.1rem solid var(--lightpurple);
+  margin-right: 0.5rem;
 }
 .newpoem-info {
   text-align: left;
@@ -534,9 +536,8 @@ header .navbar-header.fixed .navbar-list > * {
   border: 0.1rem solid var(--beige);
   background-color: var(--dark);
 }
-
 /*=========================*/
-/* news-image > top image */
+/* news-text, news-image, news-sort > top image */
 /*=========================*/
 #newsTop {
   position: relative;
@@ -598,5 +599,68 @@ header .navbar-header.fixed .navbar-list > * {
   }
   .newsTop-container img {
     height: 100%;
+  }
+}
+/*=========================*/
+/* news-text > latest updates */
+/*=========================*/
+.text-update {
+  background-color: var(--green);
+  padding: 4rem 3rem 3rem 3rem;
+  transform: scale(0.4);
+  text-align: center;
+  animation: update-zoomIn 0.7s forwards;
+}
+@keyframes update-zoomIn {
+  0% {transform: scale(0.6);}
+  100%  {transform: scale(1);}
+}
+.text-update .title {
+  margin-top: 2rem;
+}
+.text-update .tagline {
+  margin-bottom: 2rem;
+}
+.text-update .tagline:before {
+  content: "";
+  display: block;
+  width: 3rem;
+  height: 0.1rem;
+  margin: 0.8rem auto;
+  background-color: var(--dark);
+}
+.text-newpoem {
+  text-align: left;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 1rem;
+  padding: 1rem;
+}
+.text-newpoem img {
+  width: 15rem;
+}
+.text-newpoem > * {
+  line-height: 2rem;
+}
+.text-newpoem .text-date {
+  font-size: small;
+  margin-bottom: 1rem;
+}
+.text-newpoem .false,
+.text-newpoem .keyword {
+  color: var(--lightpurple);
+  border: 0.1rem solid var(--lightpurple);
+  margin-right: 0.5rem;
+}
+.text-newpoem a:hover {
+  color: var(--lightpurple);
+}
+@media screen and (max-width: 600px) {
+  .text-newpoem {
+    grid-template-columns: 1fr;
+    margin-bottom: 1.5rem;
+  }
+  .text-newpoem img {
+    width: 80vw;
   }
 }
