--- a/style.css
+++ b/style.css
@@ -581,19 +581,26 @@ header .navbar-header.fixed .navbar-list > * {
   margin-bottom: 0.8rem;
 }
 .top-container a {
-  display: block;
+  display: inline-block;
   background-color: rgba(0, 0, 0, 0.3);
-  color: var(--lightpurple);
-  font-weight: 900;
-  width: 2rem;
-  height: 2rem;
-  margin: 0 auto;
+  background-position: center;
+  width: 2.5rem;
+  height: 2.5rem;
   border-radius: 50%;
-  font-size: 2rem;
-  transform: rotate(90deg);
+  position: relative;
 }
 .top-container a:hover {
   background-color: rgba(0, 0, 0, 0.5);
+}
+.top-container a .top-downarrow {
+  display: inline-block;
+  transform: rotate(90deg);
+  color: var(--lightpurple);
+  font-weight: 900;
+  font-size: 2rem;
+  position: absolute;
+  top: -10%;
+  left: 40%;
 }
 @media screen and (max-width: 600px) {
   #top {
