--- a/style.css
+++ b/style.css
@@ -542,15 +542,14 @@ header .navbar-header.fixed .navbar-list > * {
 .top-container {
   overflow: hidden;
   width: 100%;
-  min-height: 300px;
+  height: 300px;
 }
 .top-container img {
   position: absolute;
   top: 0;
   object-fit: cover;
   width: 100%;
-  height: 100%;
-  min-height: 300px;
+  height: 300px;
   overflow: hidden;
   transform-origin:100% 100%;
   animation: move 20s linear forwards;
@@ -806,4 +805,81 @@ header .navbar-header.fixed .navbar-list > * {
   .sort-container {
     grid-template-columns: repeat(2, 1fr);
   }
+}
+/*=========================*/
+/* gallery */
+/*=========================*/
+.gallery {
+  background-color: var(--orange);
+  padding: 4rem 0 3rem 0;
+  text-align: center;
+}
+.gallery .title {
+  margin-top: 2rem;
+}
+.gallery .tagline {
+  margin-bottom: 2rem;
+}
+.gallery .tagline:before {
+  content: "";
+  display: block;
+  width: 3rem;
+  height: 0.1rem;
+  margin: 0.8rem auto;
+  background-color: var(--dark);
+}
+.gallery-overlay {
+  display: none;
+  z-index: 100;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.7);
+}
+.gallery-overlay.open {
+  display: block;
+}
+.gallery-overlayInner {
+  margin: 0 auto;
+  width: fit-content;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  background-color: white;
+}
+.gallery-overlay button {
+  align-self: flex-end;
+}
+.gallery-overlay img {
+  object-fit: cover;
+  height: 85vh;
+}
+.gallery-container {
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
+  grid-auto-rows: minmax(auto, 13rem);
+}
+.gallery-image {
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: 1;
+  cursor: pointer;
+}
+.gallery-image img {
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: all 0.3s linear;
+
+}
+.gallery-image:hover img {
+  transform: scale(1.4);
 }
