--- a/style.css
+++ b/style.css
@@ -1007,3 +1007,22 @@ header .navbar-header.fixed .navbar-list > * {
 .gallery-image:hover img {
   transform: scale(1.4);
 }
+/*=========================*/
+/* contact */
+/*=========================*/
+.contact-map {
+  background-color: var(--lightpurple);
+}
+.contact-map iframe {
+  width: 100%;
+}
+.contact-info {
+  background-color: var(--lightpurple);
+  padding: 4rem 2rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
+}
+.contact-container > * {
+  margin: 1rem 0;
+}
